force-app/main/default/objects/FormularioCustomField__mdt/FormularioCustomField__mdt.object-meta.xml
<CustomObject>
    <label>FormularioCustomField</label>
    <pluralLabel>FormularioCustomField</pluralLabel>
</CustomObject>