force-app/main/default/objects/FormularioCustomField__mdt/fields/Caso__c.field-meta.xml
<CustomField>
    <fullName>Caso__c</fullName>
    <label>Caso</label>
    <length>50</length>
    <type>Text</type>
</CustomField>