force-app/main/default/objects/FormularioCustomField__mdt/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <label>Cuenta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>